--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -206,8 +206,8 @@ input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
-  background-color: #5f6f74;
-  border-color: #4f5b5f; }
+  background-color: #33C3F0;
+  border-color: #33C3F0; }
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
@@ -219,8 +219,8 @@ input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
   color: #FFF;
-  background-color: #475153;
-  border-color: #484e50; }
+  background-color: #1EAEDB;
+  border-color: #1EAEDB; }
 
 
 /* Forms
@@ -254,10 +254,9 @@ textarea {
      -moz-appearance: none;
           appearance: none; }
 textarea {
-  min-height: 105px;
+  min-height: 65px;
   padding-top: 6px;
-  padding-bottom: 6px;
-  resize: none; }
+  padding-bottom: 6px; }
 input[type="email"]:focus,
 input[type="number"]:focus,
 input[type="search"]:focus,
@@ -267,7 +266,7 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-  border: 1px solid #353738;
+  border: 1px solid #33C3F0;
   outline: 0; }
 label,
 legend {
